engine/baml-lib/baml/tests/validation_files/expr/mdx_headers_simple.baml
function SimpleTest() -> string {
    # Main Header
    let x = "hello"
    x
}

// error: Statement must end with a semicolon.
//   -->  expr/mdx_headers_simple.baml:3
//    | 
//  2 |     # Main Header
//  3 |     let x = "hello"
//    | 
